--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: black
         language_version: python3
+        exclude: ^alembic/
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: "v5.0.0"
@@ -23,5 +24,5 @@ repos:
       - id: check-toml
       - id: check-yaml
       - id: trailing-whitespace
-        exclude: ^.+(\.md)$
+        exclude: ^(alembic/|.+(\.md)$)
       - id: end-of-file-fixer
