--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "asyncio>=3.4.3",
     "black>=25.1.0",
     "debugpy>=1.8.14",
+    "freezegun>=1.5.1",
     "greenlet>=3.2.1",
     "httpx>=0.28.1",
     "pre-commit>=4.2.0",
