--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,13 +7,14 @@ repos:
     hooks:
       - id: ruff
         args: [ --fix, --unsafe-fixes ]
+        exclude: ^(alembic/|.*\.md$)
 
   - repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
       - id: black
         language_version: python3
-        exclude: ^alembic/
+        exclude: ^(alembic/|.*\.md$)
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: "v5.0.0"
@@ -24,5 +25,6 @@ repos:
       - id: check-toml
       - id: check-yaml
       - id: trailing-whitespace
-        exclude: ^(alembic/|.+(\.md)$)
+        exclude: ^(alembic/|.*\.md$)
       - id: end-of-file-fixer
+        exclude: ^(alembic/|.*\.md$)
