--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev = [
     "alembic>=1.15.2",
     "asyncio>=3.4.3",
     "black>=25.1.0",
+    "datamodel-code-generator>=0.30.0",
     "debugpy>=1.8.14",
     "freezegun>=1.5.1",
     "greenlet>=3.2.1",
@@ -24,6 +25,7 @@ dev = [
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
+    "requests>=2.32.3",
     "ruff>=0.11.7",
 ]
 
