--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
     "fastapi>=0.115.12",
+    "grpcio>=1.71.0",
+    "grpcio-tools>=1.71.0",
     "pydantic-settings>=2.9.1",
     "sqlalchemy>=2.0.40",
     "uvicorn>=0.34.2",
