--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,13 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "grpcio>=1.71.0",
     "grpcio-tools>=1.71.0",
+    "psycopg2>=2.9.10",
     "pydantic-settings>=2.9.1",
+    "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.40",
     "uvicorn>=0.34.2",
 ]
