--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.40",
+    "structlog>=25.3.0",
     "uvicorn>=0.34.2",
 ]
 
