feat: works with docker db and local fastapi

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 DB_USER=aibolit_user
-DB_PASS=
+DB_PASS=aibolit_password
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=6543
 DB_NAME=aibolit_db
+
+TEST_DB_USER=aibolit_user
+TEST_DB_PASS=aibolit_password
+TEST_DB_HOST=localhost
+TEST_DB_PORT=6543
+TEST_DB_NAME=test_aibolit_db
+
 APP_PORT=8000
 APP_HOST=localhost
 GRPC_PORT=50051
