--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "grpcio>=1.71.0",
@@ -31,6 +30,7 @@ dev = [
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
     "requests>=2.32.3",
     "ruff>=0.11.7",
 ]
