--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "grpcio>=1.71.0",
     "grpcio-tools>=1.71.0",
-    "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.40",
