--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,13 @@ dev = [
     "asyncio>=3.4.3",
     "black>=25.1.0",
     "datamodel-code-generator>=0.30.0",
-    "debugpy>=1.8.14",
-    "freezegun>=1.5.1",
     "greenlet>=3.2.1",
     "httpx>=0.28.1",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
     "pytest-cov>=6.1.1",
+    "pytest-freezer>=0.4.9",
     "requests>=2.32.3",
     "ruff>=0.11.7",
 ]
